<resources>
    <string name="app_name">Overlift</string>
    <string name="today_s_workout">Ready to workout?</string>
    <string name="this_is_the_profile_activity">This is the Profile Activity</string>
    <string name="name">Name</string>
    <string name="please_enter_your_age">Please enter your age</string>
    <string name="gender">Gender</string>
    <string name="please_enter_your_weight">Please enter your weight</string>
    <string name="age">Age</string>
    <string name="please_enter_your_gender">Please enter your gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="please_enter_your_height">Please enter your height</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="desc" />
    <string name="_1800_2500">1800/2500</string>
    <string name="track_your_diet">Track Your Diet:</string>
    <string name="amount_of_fats">Amount of Fats</string>
    <string name="name_of_food">Name of Food</string>
    <string name="amount_of_calories">Amount of Calories</string>
    <string name="amount_of_carbs">Amount of Carbs</string>
    <string name="amount_of_protein">Amount of Protein</string>
    <string name="quantity">Quantity</string>
    <string name="fats">Fats</string>
    <string name="protein">proteins</string>
    <string name="carbs">carbs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>>
</resources>
